--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <h2><span>Frontend</span></h2>
                 <div class="Interactive">
                     <h3>1<br><span>Đang Follow</span> </h3>
-                    <h3>20k<br><span>Follower</span> </h3>
+                    <h3>19k<br><span>Follower</span> </h3>
                     <h3>1.2M <br><span>Thích</span> </h3>
                 </div>
                 <div class="follow">
                     <a href="https://www.facebook.com/huyit.ml" class="fb"><i class="fa-brands fa-facebook"></i></a>
                     <button>Follow</button>
-                    <a href="#" class="tiktok"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/HuyStars" class="tiktok"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
