--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                 </div>
             </div>
         </div>
+        <audio id="myAudio" src="nhacnen.mp3" autoplay></audio>
     </div>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+  var audio = document.getElementById('myAudio');
+  audio.play();
+});
+
+</script>
 </html>
