--- a/index.html
+++ b/index.html
@@ -14,7 +14,28 @@
 </head>
 
 <body>
+    <div style="--i:1" class="snow"></div>
+    <div style="--i:2" class="snow"></div>
+    <div style="--i:3" class="snow"></div>
+    <div style="--i:4" class="snow"></div>
+    <div style="--i:5" class="snow"></div>
+    <div style="--i:6" class="snow"></div>
+    <div style="--i:7" class="snow"></div>
+    <div style="--i:8" class="snow"></div>
+    <div style="--i:9" class="snow"></div>
+
+    <div style="--i:1.5" class="snow"></div>
+    <div style="--i:2.5" class="snow"></div>
+    <div style="--i:3.5" class="snow"></div>
+    <div style="--i:4.5" class="snow"></div>
+    <div style="--i:5.5" class="snow"></div>
+    <div style="--i:6.5" class="snow"></div>
+    <div style="--i:7.5" class="snow"></div>
+    <div style="--i:8.5" class="snow"></div>
+    <div style="--i:9.5" class="snow"></div>
+
     <div class="card">
+
         <div class="lines"></div>
         <div class="linesimg">
             <img src="huystars.jpg" alt="">
@@ -39,10 +60,10 @@
     </div>
 </body>
 <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var audio = document.getElementById('myAudio');
+    window.onload = function () {
+        var audio = document.getElementById("myAudio");
         audio.play();
-    });
+    }
 </script>
 
 </html>
