--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="box-content">
             <div class="content">
-                <h2>Le Van Huy</h2>
+                <h2>I'm Huy</h2>
                 <h2><span>Frontend</span></h2>
                 <div class="Interactive">
                     <h3>1<br><span>Đang Follow</span> </h3>
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <audio id="myAudio" src="nhacnen.mp3" controls autoplay></audio>
+        <audio id="myAudio" src="buitruong.mp3" controls autoplay></audio>
     </div>
 </body>
 <script>
