--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="lines"></div>
         <div class="linesimg">
-            <img src="huystars.jpg" alt="">
+            <img src="anhzzz.jpg" alt="">
         </div>
         <div class="box-content">
             <div class="content">
